2002-12-27  Bastien Nocera  <hadess@hadess.net>

	* src/Makefile.am: added some targets to remove the need for a manual
	regenerate-build-sources line

2002-12-27  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (on_about1_activate): the Copyright notice shouldn't be
	translatable (Closes: #101947, #102010)

2002-12-24  Bastien Nocera  <hadess@hadess.net>

	* src/Makefile.am:
	* src/gtk-xine.c: (gtk_xine_filter_events), (gtk_xine_realize):
	* src/totem.c: (video_widget_create):
	* src/xdnd.c: (wXDNDInitializeAtoms), (wXDNDMakeAwareness),
	(wXDNDClearAwareness), (wXDNDProcessSelection), (isAwareXDND),
	(acceptXDND), (wXDNDProcessClientMessage):
	* src/xdnd.h: some work towards getting DND to work on the playback
	canvas itself, needs *more* work

2002-12-23  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (on_about1_activate): change the (C) to a proper
	copyright sign

2002-12-16  Bastien Nocera  <hadess@hadess.net>

	* src/gtk-xine.c: (xine_thread), (gtk_xine_unrealize):
	* src/scrsaver.c: (scrsaver_init), (scrsaver_disable),
	(scrsaver_enable):
	* src/totem.c: (totem_action_exit): exit fixes, should fix the very
	slow exits (Closes: #101299, #101258)

2002-12-16  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (update_sliders), (main): fix up volume being at 0
	on startup (patch by John McCutchan <ttb@tentacle.dhs.org>)
	(Closes: #101298)

2002-12-15  Bastien Nocera  <hadess@hadess.net>

	* src/list_cddrives.c: (list_cdroms): fix compilation,
	actually release 0.13.1 now

2002-12-15  Bastien Nocera  <hadess@hadess.net>

	* src/cd-drive.c: fix typo

2002-12-13  Bastien Nocera  <hadess@hadess.net>

	* src/cd-drive.c: (parse_sg_line), (add_linux_cd_recorder),
	(add_linux_cd_drive), (linux_scan), (scan_for_cdroms):
	* src/cd-drive.h: some fixes from Iain Holmes <iain@prettypeople.org>,
	change max_speed to max_speed_write, and add max_speed_read
	* src/totem-cd-selection.h: use (void) when there are no args, not just
	()
